Fixes navbar collapse bug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,5 +66,29 @@
 .column-delete {
     max-width: 5%;
 }
-
 /* End of Task table columns */
+
+
+#logout {
+    display: flex;
+}
+
+#login {
+    top: 10px;
+}
+
+@media only screen and (max-width: 992px) {
+    #logout img{
+        display: none;
+    }
+}
+
+
+@media only screen and (min-width: 992px) {
+    .navbar-right {
+        position: absolute;
+        right: 5px;
+        float: right;
+    }
+}
+
